# petstoreAPI

./: README.MD  config.py  main.py  pyproject.toml
alluredir/: 00cc904f-1c87-4d75-be5c-7d6ec484de72-result.json  019154f0-6497-49f6-9d32-6befecf30ab3-attachment.txt  01ed611e-7607-4e50-aa98-b2a0e513d9e5-result.json  040378a1-47d8-4352-a334-58803ac749a7-attachment.txt  04b6b40e-b0c8-4d6a-b51b-1be50c6520f8-attachment.txt  04e2fc24-dabd-464b-816f-eb734bcdc7d5-container.json  05cfa7c2-533c-46b6-a805-6a715af2dad3-container.json  05e7b1e7-c6f5-4019-9626-c7cb683b62a1-result.json  062a6bb8-1fd5-4f3d-b1df-f582b04fc9a5-container.json  06784c77-68b3-474c-8cf3-c190052cc2ba-container.json  0866d505-9d12-4dd7-9de1-b57fbbacbadf-container.json  0a4d19c0-cb23-4412-8429-1e4bf7a839d1-result.json  0a847bb4-1b02-4394-b289-ad72f2656c43-container.json  0aeaad8c-fcf3-40cf-a608-22dc1546322d-result.json  0b8d5d1c-5700-4600-9783-15d7203d7627-attachment.txt  0be9e406-d8e1-40b8-b1e8-53221bbb7fbd-container.json  0c83eee0-ff45-466f-9ebf-76d7cba7f599-container.json  0dbf1d63-27e3-4b6f-8d45-e3c259fa43cb-container.json  0eb8d5a1-2302-4e7c-af1d-af3ab32afa7c-container.json  108e4dbb-ae1d-4770-8e7c-671c3f29472c-container.json  11c5a203-f343-4363-8f21-c5123c28c8e6-container.json  12167d8e-a462-4381-b686-19865070b3f8-attachment.txt  12489435-1a56-41c7-871b-64918157bad6-container.json  13b1cc4c-9cc1-4fd2-90d8-756781ac429d-container.json  1436c575-27d6-4546-9c45-368953a951f8-result.json  14c000d0-d59e-4378-8fa8-a2ca8f07ef34-container.json  1549d23e-148d-4584-be51-2fef39f85b9c-attachment.txt  (+310 more)
tests/: conftest.py
(+7 files in other folders)
